--- a/index.html
+++ b/index.html
@@ -3,42 +3,380 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AP Systems Lab</title>
-  <meta name="description" content="Lightweight WordPress tools by AP Systems Lab." />
+  <title>AP Systems Lab — WordPress Tools</title>
+  <meta name="description" content="Lightweight WordPress tools for business workflows. First product: AP Internal Linking Helper." />
+
   <style>
+    :root{
+      --bg:#0b0f14;
+      --panel:#0f1620;
+      --panel-2:#0c121a;
+      --text:#f5f7fb;
+      --muted:#b8c2d1;
+      --accent:#7aa2ff;
+      --accent-2:#8bffcf;
+      --border:rgba(255,255,255,0.08);
+      --shadow:0 10px 30px rgba(0,0,0,0.35);
+      --radius:16px;
+      --radius-sm:10px;
+      --max:1080px;
+    }
+    *{box-sizing:border-box}
     body{
-      margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background:#0b0f14; color:#f5f7fb;
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 600px at 10% -10%, rgba(122,162,255,0.12), transparent 60%),
+        radial-gradient(1200px 600px at 90% 10%, rgba(139,255,207,0.10), transparent 60%),
+        var(--bg);
+      line-height:1.5;
     }
-    .wrap{
-      max-width:900px; margin:0 auto; padding:80px 20px;
+    a{color:inherit; text-decoration:none}
+    .wrap{max-width:var(--max); margin:0 auto; padding:32px 20px 80px}
+
+    .nav{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:14px 18px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.04), transparent);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      backdrop-filter: blur(6px);
     }
+    .brand{display:flex; align-items:center; gap:10px; font-weight:700}
+    .brand-badge{
+      width:28px; height:28px; border-radius:9px;
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
+      display:grid; place-items:center;
+      color:#041018; font-weight:900; font-size:14px;
+    }
+    .nav-links{display:flex; gap:14px; font-size:14px; color:var(--muted)}
+    .nav-links a:hover{color:var(--text)}
+
+    .hero{
+      margin-top:28px;
+      display:grid; gap:26px;
+      grid-template-columns: 1.1fr 0.9fr;
+    }
+    @media (max-width: 900px){ .hero{grid-template-columns:1fr} }
+
     .card{
-      background:#111826; border:1px solid rgba(255,255,255,0.08);
-      border-radius:14px; padding:32px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.03), transparent), var(--panel);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 26px;
+      box-shadow: var(--shadow);
     }
-    h1{margin:0 0 10px; font-size:36px}
-    p{margin:0 0 18px; color:#b8c2d1}
     .pill{
-      display:inline-block; padding:6px 10px; font-size:12px;
-      border:1px solid rgba(255,255,255,0.08);
-      border-radius:999px; color:#b8c2d1;
-      margin-bottom:14px;
+      display:inline-flex; align-items:center; gap:8px;
+      padding:6px 10px; font-size:12px; color:var(--muted);
+      background: rgba(255,255,255,0.04);
+      border:1px solid var(--border);
+      border-radius: 999px;
+    }
+    h1{
+      font-size: clamp(28px, 4vw, 44px);
+      line-height:1.1;
+      margin:14px 0 10px;
+      letter-spacing:-0.5px;
+    }
+    .sub{
+      color:var(--muted);
+      font-size: clamp(15px, 1.2vw, 17px);
+      margin: 0 0 18px;
+    }
+    .points{display:grid; gap:10px; margin:18px 0 22px}
+    .point{
+      display:flex; gap:10px; align-items:flex-start;
+      padding:10px 12px;
+      background: rgba(255,255,255,0.03);
+      border:1px solid var(--border);
+      border-radius: var(--radius-sm);
+      font-size:14px;
+    }
+    .dot{
+      width:9px; height:9px; border-radius:50%;
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
+      margin-top:7px; flex: 0 0 9px;
+    }
+
+    .btns{display:flex; gap:10px; flex-wrap:wrap}
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      padding: 12px 16px;
+      border-radius: 12px;
+      font-weight:600; font-size:14px;
+      border:1px solid var(--border);
+      background: rgba(255,255,255,0.03);
+      color: var(--text);
+    }
+    .btn-primary{
+      background: linear-gradient(135deg, rgba(122,162,255,0.18), rgba(139,255,207,0.14));
+      border-color: rgba(255,255,255,0.14);
+    }
+    .btn-ghost{color:var(--muted)}
+
+    .preview{
+      background: linear-gradient(180deg, rgba(255,255,255,0.03), transparent), var(--panel-2);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 22px;
+      box-shadow: var(--shadow);
+      min-height: 280px;
+      display:grid; gap:14px; align-content:start;
+    }
+    .preview-box{
+      border:1px dashed rgba(255,255,255,0.18);
+      border-radius: 12px;
+      padding: 14px;
+      color: var(--muted);
+      font-size: 13px;
+    }
+
+    .section{
+      margin-top: 46px;
+      background: rgba(255,255,255,0.02);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 28px;
+    }
+    .section h2{
+      margin: 0 0 8px;
+      font-size: clamp(20px, 2.4vw, 26px);
+    }
+    .section p{color: var(--muted); margin: 0 0 14px}
+
+    .grid-3{
+      display:grid; gap:12px;
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 900px){ .grid-3{grid-template-columns:1fr} }
+
+    .feat{
+      padding: 16px;
+      background: rgba(255,255,255,0.03);
+      border:1px solid var(--border);
+      border-radius: var(--radius-sm);
+    }
+    .feat h3{margin:0 0 6px; font-size:16px}
+    .feat p{margin:0; font-size:13.5px}
+
+    .compare{
+      display:grid; gap:14px;
+      grid-template-columns: 1fr 1fr;
+    }
+    @media (max-width: 900px){ .compare{grid-template-columns:1fr} }
+
+    .col{
+      border:1px solid var(--border);
+      border-radius: var(--radius-sm);
+      padding: 18px;
+      background: rgba(255,255,255,0.03);
+    }
+    .col h3{margin:0 0 10px; font-size:16px}
+    ul{margin:0; padding-left: 18px; color: var(--muted); font-size: 13.5px}
+    li{margin:6px 0}
+
+    .pricing{
+      display:grid; gap:14px;
+      grid-template-columns: 1.2fr 0.8fr;
+      align-items: stretch;
+    }
+    @media (max-width: 900px){ .pricing{grid-template-columns:1fr} }
+
+    .price-card{
+      background: linear-gradient(135deg, rgba(122,162,255,0.10), rgba(139,255,207,0.08)),
+                  rgba(255,255,255,0.03);
+      border:1px solid rgba(255,255,255,0.14);
+      border-radius: var(--radius);
+      padding: 26px;
+      box-shadow: var(--shadow);
+    }
+    .price{
+      font-size: 40px; font-weight:800; letter-spacing:-0.8px;
+      margin: 8px 0 6px;
+    }
+    .price small{font-size: 14px; color: var(--muted); font-weight:500}
+    .fine{color: var(--muted); font-size: 12.5px}
+
+    details{
+      border:1px solid var(--border);
+      border-radius: 12px;
+      padding: 12px 14px;
+      background: rgba(255,255,255,0.03);
+      margin: 8px 0;
+    }
+    summary{cursor:pointer; font-weight:600; font-size:14.5px}
+    details p{margin:8px 0 0; color:var(--muted); font-size:13.5px}
+
+    .footer{
+      display:flex; justify-content:space-between; gap:10px; flex-wrap:wrap;
+      color: var(--muted);
+      font-size: 12.5px;
+      margin-top: 46px;
+      padding-top: 14px;
+      border-top:1px solid var(--border);
     }
   </style>
 </head>
+
 <body>
   <div class="wrap">
-    <div class="card">
-      <span class="pill">AP Systems Lab</span>
-      <h1>WordPress tools for business workflows</h1>
-      <p>
-        We build lightweight plugins focused on speed, clarity, and conversion.
-      </p>
-      <p>
-        First product: <strong>AP Internal Linking Helper</strong>.
-      </p>
+    <div class="nav">
+      <div class="brand">
+        <span class="brand-badge">AP</span>
+        <span>AP Systems Lab</span>
+      </div>
+      <div class="nav-links">
+        <a href="#product">Product</a>
+        <a href="#compare">Free vs Pro</a>
+        <a href="#pricing">Pricing</a>
+        <a href="#faq">FAQ</a>
+      </div>
+    </div>
+
+    <div class="hero">
+      <div class="card">
+        <span class="pill">WordPress • Editor-first • Lightweight</span>
+        <h1>Internal linking that happens while you write.</h1>
+        <p class="sub">
+          AP Internal Linking Helper adds a focused sidebar to the block editor with fast internal link suggestions.
+          No setup. No bloat.
+        </p>
+
+        <div class="points">
+          <div class="point"><span class="dot"></span><div><strong>Stop hunting old posts.</strong> Suggestions appear in the editor.</div></div>
+          <div class="point"><span class="dot"></span><div><strong>Build better SEO habits.</strong> Make internal links a default step.</div></div>
+          <div class="point"><span class="dot"></span><div><strong>Low risk, low weight.</strong> Editor-only and performance-friendly.</div></div>
+        </div>
+
+        <div class="btns">
+          <!-- Replace with your Stripe Payment Link when Pro is live -->
+          <a class="btn btn-primary" href="#" target="_blank" rel="noopener">Buy Pro (Stripe)</a>
+          <a class="btn btn-ghost" href="#compare">See Pro features</a>
+        </div>
+        <div class="fine" style="margin-top:10px;">
+          Pro will unlock one-click insert, expanded suggestions, keyword matching, and exclusions.
+        </div>
+      </div>
+
+      <div class="preview">
+        <strong>Product visuals</strong>
+        <div class="preview-box">Add screenshot: Editor sidebar with suggestions.</div>
+        <div class="preview-box">Add screenshot: Pro “insert link” workflow.</div>
+        <div class="preview-box">Two clear screenshots are enough to start.</div>
+      </div>
+    </div>
+
+    <div id="product" class="section">
+      <h2>What this plugin is for</h2>
+      <p>A small tool built for writers and business owners who want better internal linking without the time sink.</p>
+      <div class="grid-3">
+        <div class="feat">
+          <h3>Fast suggestions</h3>
+          <p>Surface useful internal links inside the editor.</p>
+        </div>
+        <div class="feat">
+          <h3>Cleaner workflow</h3>
+          <p>Reduce tab switching and manual searching.</p>
+        </div>
+        <div class="feat">
+          <h3>Minimal footprint</h3>
+          <p>Designed to stay lightweight and focused.</p>
+        </div>
+      </div>
+    </div>
+
+    <div id="compare" class="section">
+      <h2>Free vs Pro</h2>
+      <p>Free builds the habit. Pro removes the remaining friction.</p>
+      <div class="compare">
+        <div class="col">
+          <h3>Free</h3>
+          <ul>
+            <li>Editor sidebar</li>
+            <li>Basic suggestions</li>
+            <li>Refresh</li>
+            <li>Copy/Open actions</li>
+          </ul>
+        </div>
+        <div class="col">
+          <h3>Pro</h3>
+          <ul>
+            <li><strong>One-click insert into selected text</strong></li>
+            <li>25+ suggestions per post</li>
+            <li>Keyword/phrase matching</li>
+            <li>Exclusions & rules</li>
+            <li>Priority support</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div id="pricing" class="section">
+      <h2>Pricing</h2>
+      <p>Simple launch pricing for Pro.</p>
+      <div class="pricing">
+        <div class="price-card">
+          <span class="pill">Launch price</span>
+          <div class="price">$39 <small>/ year</small></div>
+          <ul>
+            <li>AP Link Helper Pro ZIP</li>
+            <li>Updates for 12 months</li>
+            <li>Priority support</li>
+          </ul>
+          <div class="btns" style="margin-top:14px;">
+            <!-- Replace with your Stripe Payment Link -->
+            <a class="btn btn-primary" href="#" target="_blank" rel="noopener">Buy Pro (Stripe)</a>
+            <a class="btn btn-ghost" href="#faq">Questions?</a>
+          </div>
+          <div class="fine" style="margin-top:10px;">
+            You can add lifetime pricing later if you want.
+          </div>
+        </div>
+        <div class="col">
+          <h3>Designed for busy users</h3>
+          <ul>
+            <li>Small plugin, clear benefit.</li>
+            <li>Editor-first, minimal setup.</li>
+            <li>Easy upgrade decision.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div id="faq" class="section">
+      <h2>FAQ</h2>
+
+      <details>
+        <summary>Will the free version stay free?</summary>
+        <p>Yes. The free version stays focused on core editor suggestions.</p>
+      </details>
+
+      <details>
+        <summary>Does this change my theme/front end?</summary>
+        <p>No. It is designed as an editor helper.</p>
+      </details>
+
+      <details>
+        <summary>How do I get Pro after purchase?</summary>
+        <p>You’ll receive a download link and instructions in your Stripe receipt.</p>
+      </details>
+    </div>
+
+    <div class="footer">
+      <div>© <span id="year"></span> AP Systems Lab</div>
+      <div>Lightweight WordPress tools for business workflows.</div>
     </div>
   </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // When Pro is live, paste your Stripe Payment Link below
+    // const STRIPE_LINK = "https://buy.stripe.com/...";
+    // document.querySelectorAll('a[href="#"]').forEach(a => a.href = STRIPE_LINK);
+  </script>
 </body>
 </html>
+
