--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
       </div>
       <div class="nav-links">
         <a href="#product">Product</a>
+        <a href="#pro">Pro</a>
         <a href="#compare">Free vs Pro</a>
         <a href="#pricing">Pricing</a>
         <a href="#faq">FAQ</a>
@@ -262,9 +263,39 @@
 
       <div class="preview">
         <strong>Product visuals</strong>
-        <div class="preview-box">Add screenshot: Editor sidebar with suggestions.</div>
-        <div class="preview-box">Add screenshot: Pro “insert link” workflow.</div>
+        <div class="preview-box">Add screenshot: Pro sidebar showing expanded suggestions.</div>
+        <div class="preview-box">Add screenshot: Pro one-click insert workflow.</div>
         <div class="preview-box">Two clear screenshots are enough to start.</div>
+      </div>
+    </div>
+
+    <div id="pro" class="section">
+      <h2>AP Link Helper Pro</h2>
+      <p>Smarter internal linking suggestions and faster workflows inside the WordPress block editor.</p>
+
+      <div class="grid-3">
+        <div class="feat">
+          <h3>Expanded suggestions</h3>
+          <p>More results with richer context for content-heavy sites.</p>
+        </div>
+        <div class="feat">
+          <h3>One-click insert</h3>
+          <p>Insert the chosen link directly into selected text.</p>
+        </div>
+        <div class="feat">
+          <h3>Rules & exclusions</h3>
+          <p>Control what appears with simple keyword matching and filters.</p>
+        </div>
+      </div>
+
+      <div class="btns" style="margin-top:14px;">
+        <!-- Replace with your Stripe Payment Link -->
+        <a class="btn btn-primary" href="#" target="_blank" rel="noopener">Buy AP Link Helper Pro</a>
+        <a class="btn btn-ghost" href="#pricing">See pricing</a>
+      </div>
+
+      <div class="fine" style="margin-top:10px;">
+        Pro is built to remove the last bits of friction after you’ve formed the linking habit with Free.
       </div>
     </div>
 
@@ -379,4 +410,5 @@
   </script>
 </body>
 </html>
+
 
