--- a/index.html
+++ b/index.html
@@ -262,12 +262,21 @@
       </div>
 
       <div class="preview">
-        <strong>Product visuals</strong>
-        <div class="preview-box">Add screenshot: Pro sidebar showing expanded suggestions.</div>
-        <div class="preview-box">Add screenshot: Pro one-click insert workflow.</div>
-        <div class="preview-box">Two clear screenshots are enough to start.</div>
-      </div>
-    </div>
+  <strong>Product visuals</strong>
+
+  <div class="preview-box">
+    <img src="assets/img/Pro1 (1).png" alt="AP Link Helper Pro sidebar" style="width:100%; border-radius:10px;">
+  </div>
+
+  <div class="preview-box">
+    <img src="assets/img/Pro1 (2).png" alt="AP Link Helper Pro suggestions" style="width:100%; border-radius:10px;">
+  </div>
+
+  <div class="preview-box">
+    <img src="assets/img/Pro1 (3).png" alt="AP Link Helper Pro plugin screen" style="width:100%; border-radius:10px;">
+  </div>
+</div>
+
 
     <div id="pro" class="section">
       <h2>AP Link Helper Pro</h2>
