--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
     <div class="hero">
       <div class="card">
-        <span class="pill">WordPress • Editor-first • Lightweight</span>
+        <span class="pill">WordPress • Editor-first • Internal links</span>
         <h1>Internal linking that happens while you write.</h1>
         <p class="sub">
           AP Internal Linking Helper adds a focused sidebar to the block editor with fast internal link suggestions.
