--- a/index.html
+++ b/index.html
@@ -341,9 +341,10 @@
       </p>
     </div>
 
-    <div id="pro" class="section">
-      <h2>AP Link Helper Pro</h2>
-      <p>Smarter internal linking suggestions and faster workflows inside the WordPress block editor.</p>
+      <p>
+    Smarter internal linking suggestions and faster workflows inside the WordPress block editor.
+    Pro adds optional AI assistance to sharpen link ideas and anchor text while you write.
+  </p>
 
       <div class="grid-3">
         <div class="feat">
