--- a/index.html
+++ b/index.html
@@ -347,19 +347,19 @@
   </p>
 
       <div class="grid-3">
-        <div class="feat">
-          <h3>Expanded suggestions</h3>
-          <p>More results with richer context for content-heavy sites.</p>
-        </div>
-        <div class="feat">
-          <h3>One-click insert</h3>
-          <p>Insert the chosen link directly into selected text.</p>
-        </div>
-        <div class="feat">
-          <h3>Rules & exclusions</h3>
-          <p>Control what appears with simple keyword matching and filters.</p>
-        </div>
-      </div>
+  <div class="feat">
+    <h3>AI-assisted suggestions</h3>
+    <p>Use AI to refine link ideas and anchor text based on the paragraph you're working on.</p>
+  </div>
+  <div class="feat">
+    <h3>Expanded suggestions</h3>
+    <p>More internal link options surfaced from across your existing content.</p>
+  </div>
+  <div class="feat">
+    <h3>Rules & exclusions</h3>
+    <p>Control what appears with simple keyword matching, filters, and ignore rules.</p>
+  </div>
+</div>
 
       <div class="btns" style="margin-top:14px;">
         <!-- Replace with your Stripe Payment Link -->
