--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
         <div class="btns">
           <!-- Replace with your Stripe Payment Link when Pro is live -->
-          <a class="btn btn-primary" href="#" target="_blank" rel="noopener">Buy Pro (Stripe)</a>
+          <a class="btn btn-primary" href="#" data-buy-pro="1" target="_blank" rel="noopener">Buy Pro (Stripe)</a>
           <a class="btn btn-ghost" href="#compare">See Pro features</a>
         </div>
         <div class="fine" style="margin-top:10px;">
