--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
       <div class="btns" style="margin-top:14px;">
         <!-- Replace with your Stripe Payment Link -->
-        <a class="btn btn-primary" href="#" target="_blank" rel="noopener">Buy AP Link Helper Pro</a>
+       <a class="btn btn-primary" href="#" data-buy-pro="1" target="_blank" rel="noopener">Buy AP Link Helper Pro</a>
         <a class="btn btn-ghost" href="#pricing">See pricing</a>
       </div>
 
