--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
           </ul>
           <div class="btns" style="margin-top:14px;">
             <!-- Replace with your Stripe Payment Link -->
-            <a class="btn btn-primary" href="#" target="_blank" rel="noopener">Buy Pro (Stripe)</a>
+            <a class="btn btn-primary" href="#" data-buy-pro="1" target="_blank" rel="noopener">Buy Pro (Stripe)</a>
             <a class="btn btn-ghost" href="#faq">Questions?</a>
           </div>
           <div class="fine" style="margin-top:10px;">
