--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       </div>
     </div>
 
-    <!-- NEW: Brand statement with your 3 paragraphs -->
+        <!-- Brand statement with your 3 paragraphs -->
     <div class="section" id="about">
       <h2>About AP Systems Lab</h2>
 
@@ -341,29 +341,31 @@
       </p>
     </div>
 
+    <!-- Pro section with AI features -->
+    <div id="pro" class="section">
+      <h2>AP Link Helper Pro</h2>
       <p>
-    Smarter internal linking suggestions and faster workflows inside the WordPress block editor.
-    Pro adds optional AI assistance to sharpen link ideas and anchor text while you write.
-  </p>
+        Smarter internal linking suggestions and faster workflows inside the WordPress block editor.
+        Pro adds optional AI assistance to sharpen link ideas and anchor text while you write.
+      </p>
 
       <div class="grid-3">
-  <div class="feat">
-    <h3>AI-assisted suggestions</h3>
-    <p>Use AI to refine link ideas and anchor text based on the paragraph you're working on.</p>
-  </div>
-  <div class="feat">
-    <h3>Expanded suggestions</h3>
-    <p>More internal link options surfaced from across your existing content.</p>
-  </div>
-  <div class="feat">
-    <h3>Rules & exclusions</h3>
-    <p>Control what appears with simple keyword matching, filters, and ignore rules.</p>
-  </div>
-</div>
+        <div class="feat">
+          <h3>AI-assisted suggestions</h3>
+          <p>Use AI to refine link ideas and anchor text based on the paragraph you're working on.</p>
+        </div>
+        <div class="feat">
+          <h3>Expanded suggestions</h3>
+          <p>More internal link options surfaced from across your existing content.</p>
+        </div>
+        <div class="feat">
+          <h3>Rules & exclusions</h3>
+          <p>Control what appears with simple keyword matching, filters, and ignore rules.</p>
+        </div>
+      </div>
 
       <div class="btns" style="margin-top:14px;">
-        <!-- Replace with your Stripe Payment Link -->
-       <a class="btn btn-primary" href="#" data-buy-pro="1" target="_blank" rel="noopener">Buy AP Link Helper Pro</a>
+        <a class="btn btn-primary" href="#" data-buy-pro="1" target="_blank" rel="noopener">Buy AP Link Helper Pro</a>
         <a class="btn btn-ghost" href="#pricing">See pricing</a>
       </div>
 
@@ -373,6 +375,7 @@
     </div>
 
     <div id="product" class="section">
+
       <h2>What this plugin is for</h2>
       <p>A small tool built for writers and business owners who want better internal linking without the time sink.</p>
       <div class="grid-3">
